--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="images/flag.jpg" height  = "180px" width = "300px">
         <img src = "images/jrice.jpg" height  = "180px" width = "300px" alt ="jrice">
         
-        <p>This is a youtube video about Nigeria</p>
+        <p>This is a youtube video about Nigeria....Enjoy the video</p>
         <b> Enjoy the short video</b>
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Uyxo7QEcTqY?si=rVPeJLn_5rfQiJZQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
