--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel = "stylesheet" href ="css/style.css">
 
     </head>
-    <body bgcolor="green">
+    <body>
         <div class = "ex1menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
